<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearAlarma">

    <TableLayout
        android:layout_width="389dp"
        android:layout_height="712dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewAlarmaNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewAlarmaNombre" />

            <EditText
                android:id="@+id/editTextAlarmaNombre"
                android:layout_width="329dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewHoraAlarma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewHoraAlarma" />

            <EditText
                android:id="@+id/editTextHoraAlarma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textViewMinutosAlarma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewMinutosAlarma" />

            <EditText
                android:id="@+id/editTextMinutosAlarma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonCrearAlarma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonAlarmaCrear" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>